# Calculation_and_Derivation_lab

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: lexer.hpp  parser.hpp  visitor.hpp
src/: derivative_visitor.cpp  evaluator_visitor.cpp  lexer.cpp  parser.cpp  visitor.cpp
tests/: CMakeLists.txt  test_derivative.cpp  test_evaluate_derivative.cpp  test_evaluator.cpp
